loopdowhile.Poucet2.scala.error
Compilation error:
Poucet2:-32: error: Unmatched closing brace '}' ignored here
	}
        ^Poucet2:-31: error: illegal start of statement (no modifiers allowed here)
	override def backward(i: Int) {
        ^Poucet2:0: error: illegal start of statement (no modifiers allowed here)
	override def run() { 
        ^